# Vales

./: .gitignore  inventario_dulceria.db  main.py  pyproject.toml
assets/: inventario_dulceria.db
database/: database.py
modals/: modal_corte.py  modal_descuento.py  modal_empleado.py  modal_pago.py  modal_producto.py
